# ksbd-bot

./: .gitignore  Cargo.toml  README.md  deploy
src/: cfg.rs  main.rs
src/domain/: bot_cmd.rs  bot_state.rs  ksbd_page.rs  ksbd_page_error.rs  mod.rs  page_to_send.rs  pages_state.rs  subs_state.rs
src/logic/: bot_flow.rs  bot_state.rs  ksbd_page.rs  mod.rs  page_sender.rs  pages_state.rs  scraper.rs  subs_state.rs
