[package]
name = "ksbd-bot"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ksbd-bot-runner"
path = "src/main.rs"

[package.metadata.cross.target.armv7-unknown-linux-musleabihf]
image = "ghcr.io/cross-rs/armv7-unknown-linux-musleabihf:0.2.4"
xargo = false

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
log = "0.4.0"
pretty_env_logger = "0.4"
reqwest = "0.11"
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
teloxide = { version = "0.12.0", features = ["macros"] }
scraper = "0.16.0"
image = "0.24.6"
lazy_static = "1.4.0"
openssl = { version = "*", features = ["vendored"] }
urlencoding = "2.1.2"
